--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section id="about" data-aos="fade-right">
         <h2>About Me</h2>
         <p>
-            Experienced AI/ML Developer with 3+ years of hands-on expertise in designing, developing, and deploying machine learning and deep learning models using Python, TensorFlow, PyTorch, and Scikit-learn. Proficient in NLP and LLM-based applications, leveraging
+            Experienced AI/ML Developer with 4+ years of hands-on expertise in designing, developing, and deploying machine learning and deep learning models using Python, TensorFlow, PyTorch, and Scikit-learn. Proficient in NLP and LLM-based applications, leveraging
             tools such as Hugging Face, OpenCV, RAG, and LangChain. Skilled in building scalable data pipelines using SQL, Pandas, and Spark, and deploying models via Docker, AWS, and RESTful APIs. Proven ability to deliver production-ready AI solutions
             that enhance performance, automate workflows, and drive measurable business outcomes and expertise in GenAi
         </p>
@@ -122,26 +122,27 @@
                 <h3>AI Developer @ Intilt</h3>
                 <span>Jan 2025 – Present</span>
                 <ul>
-                    <li>Built RAG pipelines with ChromaDB & LangChain; retrieval latency ↓ 30%.</li>
-                    <li>Designed multi-agent NLP & CV workflows using OpenAI APIs.</li>
-                    <li>Deployed Streamlit & FastAPI apps on AWS; CI/CD speed ↑ 40%.</li>
+                    <li>Engineered and implemented Retrieval-Augmented Generation (RAG) pipelines using LLMs, ChromaDB, and LangChain,These mainly used for retrieving clinical,and safety-related information, and they’ve helped reduce retrieval latency ↓ 30%.</li>
+                    <li>Designed scalable multi-agent AI workflows for NLP and computer vision using OpenAI APIs, custom retrievers.</li>
+                    <li>Deployed scalable solutions on AWS (Lambda, EC2, S3) with Docker and Git-based CI/CD, boosting deployment speed by ↑ 40% and ensuring 99.9% uptime in production and aligning with MLOps best practices for reliability and scalability.</li>
                 </ul>
             </div>
             <div class="exp-card" data-tilt>
                 <h3>AI Developer @ Texas Tech University</h3>
                 <span>Aug 2023 – Jan 2025</span>
                 <ul>
-                    <li>Implemented RAG pipelines (LangChain); accuracy ↑ 15%.</li>
-                    <li>Processed 1M+ records in PyTorch & TensorFlow; perf ↑ 18%.</li>
-                    <li>Deployed backend on AWS with FastAPI; response time ↓ 30%</li>
+                    <li>Formulated and implemented advanced LLM-based applications using LangChain, including multi-agent architectures and RAG pipelines, improving contextual retrieval accuracy by ↑ 15% and reducing response time by 30% through task automation.</li>
+                    <li>Led end-to-end development of NLP systems, including data preprocessing, feature engineering, and augmentation for large-scale datasets (1M+ records); improved model performance by ↑ 18% through hyperparameter tuning.</li>
+                    <li>Deployed scalable AI solutions using PyTorch, TensorFlow, FastAPI, and AWS, collaborating with cross-functional teams to integrate transformer models, resulting in 20% faster deployment cycles and enhancing production system accuracy by 12%.</li>
                 </ul>
             </div>
             <div class="exp-card" data-tilt>
-                <h3>Data Analyst Intern @ Norm Software</h3>
-                <span>May 2022 – May 2023</span>
+                <h3>AI Developer @ Norm Software</h3>
+                <span>May 2021 – May 2023</span>
                 <ul>
-                    <li>Analyzed EHR datasets; patient-data access ↑ 40%.</li>
-                    <li>Integrated REST APIs—100% sync & HIPAA compliance.</li>
+                    <li>Developed AI models to analyze EHR (Electronic Health Records) data, uncovering usage patterns that improved patient data access efficiency by ↑ 40%.</li>
+                    <li>Built intelligent automation pipelines to enhance real-time API integration between internal systems and external databases, ensuring 100% data accuracy.</li>
+                    <li>Designed HIPAA-compliant AI workflows for secure data processing and reporting, enhancing audit-readiness compliance.</li>
                 </ul>
             </div>
         </div>
