--- a/index.html
+++ b/index.html
@@ -119,17 +119,27 @@
         <h2>Experience</h2>
         <div class="exp-grid">
             <div class="exp-card" data-tilt>
-                <h3>AI Developer @ Intilt</h3>
-                <span>Jan 2025 – Present</span>
+                <h3>AI Developer @ UnitedHealth Group</h3>
+                <span>Jan 2024 – Present</span>
                 <ul>
-                    <li>Engineered and implemented Retrieval-Augmented Generation (RAG) pipelines using LLMs, ChromaDB, and LangChain,These mainly used for retrieving clinical,and safety-related information, and they’ve helped reduce retrieval latency ↓ 30%.</li>
-                    <li>Designed scalable multi-agent AI workflows for NLP and computer vision using OpenAI APIs, custom retrievers.</li>
-                    <li>Deployed scalable solutions on AWS (Lambda, EC2, S3) with Docker and Git-based CI/CD, boosting deployment speed by ↑ 40% and ensuring 99.9% uptime in production and aligning with MLOps best practices for reliability and scalability.</li>
+                    <li>Led the development of an AI-powered claims adjudication system using NLP and deep learning models (BERT, RoBERTa) to extract
+structured data from unstructured claims documents, improving claim processing accuracy by 28% and reducing manual review effort
+by 40%.</li>
+                    <li>Architected a fraud, waste, and abuse detection pipeline leveraging Gradient Boosting and anomaly detection algorithms, flagging
+suspicious claims with 93% precision and enabling anticipatory fraud prevention worth over $3.2M annually.</li>
+                    <li>Devised HIPAA-compliant MLOps workflows on AWS SageMaker and EKS for training, deployment, and monitoring of healthcare AI
+models, reducing model deployment time from 3 weeks to 5 days.</li>
+                    <li>Created a real-time patient risk stratification model using ensemble learning techniques to predict high-cost members, enabling targeted
+care interventions and improving care plan adherence by 17%.</li>
+                    <li>Applied OCR-based EHR ingestion system integrated with OpenCV and AWS Textract, achieving 99.5% data extraction accuracy and
+reducing processing latency for large health records by 35%.</li>
+                    <li>Constructed interactive analytics dashboards in Power BI to monitor AI-driven claims, fraud alerts, and patient risk scores in real time,
+enabling leadership to take faster, data-driven decisions.</li>
                 </ul>
             </div>
             <div class="exp-card" data-tilt>
                 <h3>AI Developer @ Texas Tech University</h3>
-                <span>Aug 2023 – Jan 2025</span>
+                <span>Aug 2023 – Jan 2024</span>
                 <ul>
                     <li>Formulated and implemented advanced LLM-based applications using LangChain, including multi-agent architectures and RAG pipelines, improving contextual retrieval accuracy by ↑ 15% and reducing response time by 30% through task automation.</li>
                     <li>Led end-to-end development of NLP systems, including data preprocessing, feature engineering, and augmentation for large-scale datasets (1M+ records); improved model performance by ↑ 18% through hyperparameter tuning.</li>
@@ -137,12 +147,21 @@
                 </ul>
             </div>
             <div class="exp-card" data-tilt>
-                <h3>AI Developer @ Norm Software</h3>
+                <h3>AI Developer @ Intilt</h3>
                 <span>May 2021 – May 2023</span>
                 <ul>
-                    <li>Developed AI models to analyze EHR (Electronic Health Records) data, uncovering usage patterns that improved patient data access efficiency by ↑ 40%.</li>
-                    <li>Built intelligent automation pipelines to enhance real-time API integration between internal systems and external databases, ensuring 100% data accuracy.</li>
-                    <li>Designed HIPAA-compliant AI workflows for secure data processing and reporting, enhancing audit-readiness compliance.</li>
+                    <li>Orchestrated the Insurance Application – MSBeyond initiative, architecting an AI-driven policy and claims management platform that
+streamlined end-to-end insurance operations for over 50,000 active policies.</li>
+                    <li>Revitalized a claims automation engine leveraging OCR, NLP, and fraud detection models, reducing claim settlement turnaround time by 38%
+and improving fraud detection accuracy to 92%..</li>
+                    <li>Produced a personalized policy recommendation system using Gradient Boosting and XGBoost algorithms, which increased cross-sell
+conversion rates by 20% and Augmented customer retention.</li>
+                    <li>Delivered real-time premium prediction models powered by regression-based ML pipelines, achieving 98% accuracy in premium estimation
+across varied risk profiles.</li>
+                    <li>Integrated secure payment gateway APIs with PCI DSS compliance and Systematized invoice generation, improving payment processing
+efficiency by 35%.</li>
+                    <li>Executed the entire CI/CD lifecycle using AWS CodePipeline and CodeBuild, enabling zero-downtime deployments and Digitized rollback
+mechanisms for risk mitigation.</li>
                 </ul>
             </div>
         </div>
